--- a/index_data_git_http.html
+++ b/index_data_git_http.html
@@ -5,8 +5,8 @@
 </head>
 <body bgcolor="#666666">
     <object width="300" height="250">
-    <param name="movie" value="http://af-testbannieres.er4di.com/bannerTypo.swf">
-    <embed src="http://af-testbannieres.er4di.com/bannerTypo.swf" width="300" height="250">
+    <param name="movie" value="bannerTypo.swf">
+    <embed src="bannerTypo.swf" width="300" height="250">
     </embed>
 </object>
 </body>
